novo contact hyperlinks

--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
 							<p class= "title">EXECUTIVE PRODUCER</p>
 							<!--div class= afterline-->
 							<a class= "tel" href="tel:+44.7956.337.624">+44.7956.337.624</a>
-							<h5 class= "email">debbie@novofilms.org</h5>
+							<a class= "email" href="mailto:debbie@novofilms.org">debbie@novofilms.org</a>
 						</div>
 						<div class="contact">
 							<h3 class= "name">STEPHEN JOHNSON</h3>
 							<p class= "title">EXECUTIVE PRODUCER</p>
 							<!--div class= afterline-->
 							<a class= "tel" href="tel:+44.7974.215.732">+44.7974.215.732</a>
-							<h5 class= "email">stephen@novofilms.org</h5>
+							<a class= "email" href="mailto:stephen@novofilms.org">stephen@novofilms.org</a>
 							
 						</div>
 						<div class="cleaner">
