corrections on index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 		<meta name="author" content="Tool"/>
 		<meta name="copyright" content="&copy; 2017 Tool of North America"/><link rel="apple-touch-icon" href="assets/imgs/mobile/ToolFav.png"/>
 		<meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<link rel="stylesheet" href="css/novo.css">
+		
+		
+			<link rel="stylesheet" href="css/novo.css">
+		
+
+		
+
 	</head>
 	<body>
 		<div id="novo">
@@ -34,7 +40,7 @@
 						<h3>OUR WORK</h3>
 						<ul>
 							<li class="small">
-								<a href="http://toolofna.com/#!/work/tag/featured">
+								<a href="http://toolofna.com/#!/work/tag/live%20action">
 									<div></div>
 									<h4>CONTENT</h4>
 								</a>
@@ -60,7 +66,7 @@
 						</ul>
 					</section>
 					<section class="directors">
-						<h3>TOOL DIRECTORS<br>AVAILABLE IN THE UK, AMSTERDAM AND FRANCE</h3>
+						<h3>TOOL DIRECTORS <br>AVAILABLE IN THE UK, AMSTERDAM AND FRANCE</h3>
 						<div class="directors_wrapper">
 							<ul class="column column-left">
 								<li>
